API accept html gives redirect
